style: apply spotless
Signed-off-by: Hiroshi Miura <miurahr@linux.com>